image scale correction mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,9 @@
-/* @media screen and (max-width: 600px) and (orientation:portrait) {
-    .container {
-        display: none;
-    }
-    .portrait{
-        display: block;
+@media screen and (max-width: 600px) {
+    .img-room {
+        transform: scale(.7);
+        transform-origin: center left;
     }
 }
-
-@media screen and (min-width: 601px) and (orientation:landscape) {
-    .container {
-        display: block;
-    }
-    .portrait{
-        display: none;
-    }
-} */
-
 .App {
     padding: 10px;
     min-height: 100vh;
@@ -35,10 +23,8 @@
 }
 
 .img-room {
-    width: 100%;
-    max-width: 600px;
-    /* height: 400px; */
-    aspect-ratio: 3 / 2;
+    width:600px;    
+    height: 400px;    
     border: 4px solid;
     background-size: 2400px 1600px;
     image-rendering: -webkit-optimize-contrast;
